--- a/android/Cargo.toml
+++ b/android/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 store = { path = "../store" }
 jni = { version = "0.19.0", default-features = false }
+bincode = "1.3.3"
 
 [lib]
 crate-type = ["cdylib"]
