--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 ureq = "2.4.0"
 once_cell = "1.9.0"
+serde = { version = "1.0.136", features = ["derive"] }
+rand = "0.8.4"
