--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ureq = "2.4.0"
+reqwest = { version = "0.11.9", features = ["rustls-tls"], default-features = false }
 once_cell = "1.9.0"
 serde = { version = "1.0.136", features = ["derive"] }
 rand = "0.8.4"
+tokio = { version = "1.17.0", features = ["full"] }
+bincode = "1.3.3"
