--- a/ios/Cargo.toml
+++ b/ios/Cargo.toml
@@ -1,13 +1,12 @@
-[workspace]
-members = ["android", "ios", "store"]
 [package]
-name = "rust-store"
+name = "ios"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-store = { path = "./store" }
-serde-reflection = "0.3.5"
-serde_yaml = "0.8.23"
+store = { path = "../store" }
+
+[lib]
+crate-type= ["staticlib"]
